--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@fullcalendar/daygrid": "5.5.0",
     "@fullcalendar/interaction": "5.5.0",
     "@fullcalendar/react": "5.5.0",
-    "@material-ui/core": "4.11.3",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.57",
     "@material-ui/pickers": "3.3.10",
