--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-helmet-async": "1.0.9",
     "react-icons": "^4.2.0",
     "react-jvectormap": "0.0.16",
+    "react-medium-image-zoom": "^3.1.3",
     "react-perfect-scrollbar": "1.5.8",
     "react-quill": "1.3.5",
     "react-redux": "7.2.2",
